# Htunn_offsec-ai

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HYBRID_IDENTITY_QUICKREF.md  IMPLEMENTATION_HYBRID_IDENTITY.md  Makefile  PROJECT_STRUCTURE.md  README.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.sh  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: action-example.yml  docker.yml  offsec-ai-action.yml  publish.yml  sonarcloud.yml  test.yml
docs/: DOCKER.md  api.md  auth.md  azure-ad-flow-explained.md  enterprise.md  hybrid-identity.md  k8s.md  openclaw.md  owasp-scanner.md  quickstart.md
examples/: ai_mcp_k8s_openclaw_examples.py  comprehensive_examples.py  mtls_examples.py  owasp_scan_examples.py  usage_examples.py
src/offsec_ai/: __init__.py  cli.py  log_config.py
src/offsec_ai/core/: a2a_attacker.py  a2a_scanner.py  ai_owasp_scanner.py  auth_attacker.py  auth_scanner.py  cert_analyzer.py  hybrid_identity_checker.py  k8s_attacker.py  l7_detector.py  llm_judge.py  mcp_attacker.py  mcp_scanner.py  mtls_checker.py  openclaw_attacker.py  openclaw_scanner.py  owasp_scanner.py
src/offsec_ai/models/: a2a_result.py  ai_owasp_result.py  auth_result.py  mcp_result.py  mtls_result.py  openclaw_result.py  owasp_result.py  scan_result.py
src/offsec_ai/utils/: a2a_cve_db.py  a2a_payloads.py  ai_owasp_payloads.py  ai_owasp_remediation.py  auth_cve_db.py  auth_payloads.py  llm_encoders.py  mcp_cve_db.py  mcp_payloads.py  openclaw_cve_db.py  openclaw_payloads.py
src/simple_port_checker/: __init__.py  cli.py
tests/: test_a2a_scanner.py  test_ai_owasp.py  test_auth_scanner.py  test_cert_analyzer.py  test_cert_analyzer_extended.py  test_cli.py  test_cli_run_functions.py  test_dns_trace.py  test_enterprise_features.py  test_exporters.py  test_guardrail_judge_sigs.py  test_hybrid_identity.py  test_hybrid_identity_extended.py  test_l7_detector.py  test_l7_detector_extended.py  test_l7_models.py  test_llm_attack_method.py  test_llm_attacker_auth.py  test_llm_judge.py  test_mcp_attacker.py  test_mcp_attacker_extended.py  test_mcp_extended.py  test_mcp_scanner.py  test_mcp_scanner_extended.py  test_mtls.py  test_mtls_checker_deep.py  test_mtls_checker_extended.py  test_mtls_integration.py  test_mtls_owasp_extras.py  test_openclaw.py  test_owasp_models.py  test_owasp_scanner.py  test_port_scanner.py  test_port_scanner_security_headers.py  test_security_headers.py  test_utilities.py
