[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offsec-ai"
version = "2.5.8"
description = "Offensive-security toolkit: port scanning, L7/WAF detection, mTLS, certificate analysis, OWASP Top 10 (with LLM judge), AI/LLM OWASP Top 10 black-box probing, MCP endpoint security scanning, OpenClaw gateway security assessment, OIDC/OAuth2/SAML auth protocol security"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Htunn"},
    {email = "htunnthuthu.linux@gmail.com"}
]
maintainers = [
    {name = "Htunn"},
    {email = "htunnthuthu.linux@gmail.com"}
]
keywords = ["firewall", "port-scanner", "l7-protection", "waf", "network", "security", "ssl", "tls", "certificate", "certificate-analysis", "pki", "offensive-security", "red-team", "pentest", "ai", "llm", "mcp", "owasp", "ai-security", "model-context-protocol", "openclaw", "ai-gateway", "personal-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "dnspython>=2.4.0",
    "python-nmap>=0.7.1",
    "asyncio-throttle>=1.0.2",
    "brotli>=1.0.9",
    "cryptography>=41.0.0",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "reportlab>=4.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ruff>=0.4.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.4.0",
    "pip-audit>=2.7.0",
    "types-requests>=2.31.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
gemini = [
    "google-generativeai>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/htunn/offsec-ai"
Repository = "https://github.com/htunn/offsec-ai"
Issues = "https://github.com/htunn/offsec-ai/issues"
Documentation = "https://github.com/htunn/offsec-ai#readme"

[project.scripts]
offsec-ai = "offsec_ai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/offsec_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/CONTRIBUTING.md",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["offsec_ai"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Per-module overrides: suppress pre-existing type errors in legacy modules.
# New modules added after v2.5.0 should NOT be added here — fix types instead.
[[tool.mypy.overrides]]
module = [
    "offsec_ai.cli",
    "offsec_ai.core.ai_owasp_scanner",
    "offsec_ai.core.auth_attacker",
    "offsec_ai.core.auth_scanner",
    "offsec_ai.core.cert_analyzer",
    "offsec_ai.core.guardrail_bench",
    "offsec_ai.core.hybrid_identity_checker",
    "offsec_ai.core.k8s_attacker",
    "offsec_ai.core.k8s_scanner",
    "offsec_ai.core.l7_detector",
    "offsec_ai.core.llm_conversation_attacker",
    "offsec_ai.core.llm_judge",
    "offsec_ai.core.mcp_attacker",
    "offsec_ai.core.mcp_scanner",
    "offsec_ai.core.mtls_checker",
    "offsec_ai.core.openclaw_attacker",
    "offsec_ai.core.openclaw_scanner",
    "offsec_ai.core.owasp_scanner",
    "offsec_ai.core.security_headers",
    "offsec_ai.models.l7_result",
    "offsec_ai.models.owasp_result",
    "offsec_ai.models.scan_result",
    "offsec_ai.utils.common_ports",
    "offsec_ai.utils.exporters",
    "offsec_ai.utils.l7_signatures",
    "offsec_ai.utils.llm_jailbreaks",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that call live network services (deselect with -m 'not integration')",
    "slow: marks tests that take more than 5 seconds",
    "security: marks tests that probe for security vulnerabilities",
    "network: marks tests that require network connectivity",
]

[tool.coverage.run]
source = ["src/offsec_ai"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 60

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
]
ignore = [
    "S101",  # assert used (OK in tests)
    "S501",  # requests without verify=True (intentional in security scanners)
    "S105",  # hardcoded password (false positives in payload strings)
    "S106",  # hardcoded password in function args
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]     # relax security and naming in tests
"examples/**" = ["S", "T"]  # relax in examples

[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv"]
skips = [
    "B101",  # assert_used — OK in tests
    "B603",  # subprocess_without_shell_equals_true — intentional in port scanner
    "B501",  # requests with verify=False — intentional in security scanners
    "B105",  # hardcoded_password_string — false positives in payload strings
    "B106",  # hardcoded_password_funcarg
    "B110",  # try_except_pass — intentional: scanners must not crash on single-probe failures
    "B112",  # try_except_continue — intentional: iteration continues after failed probe
    "B404",  # subprocess import — required by cert-chain and mcp-scan features
    "B405",  # xml.etree import — controlled SAML parsing; XXE mitigated by CPython defaults
]
